--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -79,7 +79,9 @@
 	+r(450)
 		padding: 30px 40px 80px 40px
 	+r(400)
-		padding: 25px 40px 85px 40px
+		padding: 25px 40px 75px 40px
+	+r(350)
+		padding: 25px 40px 60px 40px
 
 .aside
 	.contacts-wrap
