--- a/src/sass/components/_inputs.sass
+++ b/src/sass/components/_inputs.sass
@@ -75,6 +75,9 @@
 				font-size: 15px
 				transform: translate(-10px, -40px)
 				transition-delay: 0s
+			textarea.input-field
+				label
+					transform: translate(-10px, -34px)
 		input[data-validation] + *
 			&:after
 				content: ' *'
@@ -90,6 +93,11 @@
 			&:focus ~ label
 				font-size: 15px
 				transform: translate(-10px, -40px)
+				transition-delay: 0s
+		textarea.input-field
+			&:focus ~ label
+				font-size: 15px
+				transform: translate(-10px, -34px)
 				transition-delay: 0s
 				
 		&.search-field
@@ -143,8 +151,13 @@
 					transition: font-size .15s 0s, transform .15s 0s, opacity .15s 0s ease-in, visibility 0s .2s
 		&.input-textarea
 			label
-				top: 19px
+				top: 14px
 				bottom: auto
+			&.editing
+				label
+					font-size: 15px
+					transform: translate(-10px, -34px)
+					transition-delay: 0s
 		&.c2
 			width: 45.83%
 			+r(600)
@@ -372,8 +385,7 @@
 			opacity: 0
 	&.input-textarea
 		.help-block
-			bottom: auto
-			top: 0
+			top: -20px
 	&.drop-item.focus
 		.help-block
 			opacity: 1
