--- a/src/templates/3-0-inner.pug
+++ b/src/templates/3-0-inner.pug
@@ -80,7 +80,7 @@ block content
 											.play-button-icon
 								.swiper-slide.swiper-slide-social(data-link="social-bttn")
 									+share-block
-							.swiper-scrollbar.inner-slider-bar
+							//- .swiper-scrollbar.inner-slider-bar
 							.swiper-navigation
 								.slide-target(data-slide="portfolio-bttn") portfolio
 								.slide-target(data-slide="editorial-bttn") editorial
