--- a/src/sass/components/_modals.sass
+++ b/src/sass/components/_modals.sass
@@ -17,16 +17,16 @@
 		right: 0
 		bottom: 0
 		top: 0
-		pointer-events: all
-		+nosel
 		// width: 100%
 		// height: 100%
-		padding: 10px
+		// padding: 10px
 		z-index: 4
-		transition: visibility 0s .3s
+		transform: translateX(-110%)
+		transition: visibility 0s .3s, transform 0s .4s
 		&.active
 			visibility: visible
-			transition-delay: .2s
+			transform: none
+			transition-delay: .0s, .0s
 			.modal-menu
 				&__l-1, &__l-2
 					&::before
@@ -80,18 +80,19 @@
 		width: 100%
 		height: 100%
 	&-menu
-		
+		+nosel
+		pointer-events: all
 		position: relative
 		background-color: transparent
 		vertical-align: middle
 		text-align: center
 		overflow: hidden
-		padding-top: 80px
-		padding-bottom: 15px
+		
 		&__l-1,&__l-2
 			position: absolute
 			top: 0
 			left: 0
+			z-index: 1
 			width: 100%
 			height: 100%
 			visibility: hidden
@@ -103,7 +104,7 @@
 				transition: transform .3s ease-out
 				visibility: visible
 				background-color: $bg-color
-				z-index: 1
+				z-index: -1
 				width: 100%
 				height: 100%
 				transform-origin: 0 0
@@ -120,19 +121,20 @@
 				transform-origin: 100% 100%
 		&-inner
 			width: 100%
-			height: 100%
+			height: 100%		
 			position: relative
-			z-index: 2
+			z-index: 5
 			transition: background-color .3s 0s
 			overflow-y: auto
-			overflow-x: hidden
+			overflow-x: auto
 			-webkit-overflow-scrolling: touch
 			+nosel
-			padding-top: 60px
+			padding-top: 90px
 			padding-right: 60px
 			padding-left: 30px
-			+r(450)
-				padding-top: 30px
+			padding-bottom: 15px
+			// +r(450)
+			// 	padding-top: 30px
 			ul
 				text-align: left
 				li
@@ -237,7 +239,7 @@
 			transform-origin: 100% 0
 			right: 45px
 			opacity: 0
-			z-index: 3
+			z-index: 7
 			transition: transform .3s .1s, opacity .3s .1s
 
 		.pop-close
