business quest scroll

--- a/src/templates/6-0-contacts.pug
+++ b/src/templates/6-0-contacts.pug
@@ -29,7 +29,7 @@ block content
 					.main.bg-white
 						.main-content
 							.form-block
-								form(action="#").js-validate
+								form#contacts-form(action="#").js-validate
 									.input-row
 										.input-item.c2
 											input.input-field(type="text"
