--- a/src/templates/partials/_modals.pug
+++ b/src/templates/partials/_modals.pug
@@ -25,7 +25,7 @@
 				li.pages-links__item
 					a.navigation-link__item.modal-link(href="./7-0-Become-model.html") Become a model
 				li.pages-links__item
-					a.navigation-link__item.modal-link(href="./6-0-contacts.html") Business request
+					a.navigation-link__item.modal-link.business-request(href="./6-0-contacts.html") Business request
 				li.pages-links__item.pages-links--social
 					a.navigation-link__item.modal-link(href="#") facebook
 				li.pages-links__item
