change validate, email template

--- a/src/templates/partials/_modals.pug
+++ b/src/templates/partials/_modals.pug
@@ -2,7 +2,7 @@
 	.modal-container.modal-menu
 		.modal-menu__l-1
 		.modal-menu__l-2
-		a(href="http://flxmd.by/" target="_blank").link-dev.no-barba Made in Flex.media
+		//- a(href="http://flxmd.by/" target="_blank").link-dev.no-barba Made in Flex.media
 		.modal-menu-inner
 			.pop-close.closePopup
 				+icon('cross')
