--- a/src/sass/components/_modals.sass
+++ b/src/sass/components/_modals.sass
@@ -86,7 +86,7 @@
 		background-color: transparent
 		vertical-align: middle
 		text-align: center
-		overflow: hidden
+		overflow-y: scroll
 		
 		&__l-1,&__l-2
 			position: absolute
@@ -121,12 +121,12 @@
 				transform-origin: 100% 100%
 		&-inner
 			width: 100%
-			height: 100%		
+			// height: 100%		
 			position: relative
 			z-index: 5
 			transition: background-color .3s 0s
-			overflow-y: auto
-			overflow-x: auto
+			// overflow-y: scroll
+			// overflow-x: hidden
 			-webkit-overflow-scrolling: touch
 			+nosel
 			padding-top: 90px
