--- a/src/templates/7-0-Become-model.pug
+++ b/src/templates/7-0-Become-model.pug
@@ -173,27 +173,29 @@ block content
 											.dz-message 
 												span.drop-item__icon
 													+icon('cross')
-												//- input.input-field(
-												//- 	type="hidden"
-												//- 	id="photos-1"
-												//- 	data-validation="required"
-												//- 	data-validation-error-msg="required upload file"
-												//- 	)
+												input.input-field(
+													type="hidden"
+													data-validation="required"
+													data-validation-error-msg="required upload file"
+													)
 												.input-label Add photo face
 										.input-item.c2.drop-item(action="/upload")
 											.dz-message 
 												span.drop-item__icon
 													+icon('cross')
+												input.input-field(type="hidden")
 												.input-label Add profile photo
 										.input-item.c2.drop-item(action="/upload")
 											.dz-message 
 												span.drop-item__icon
 													+icon('cross')
+												input.input-field(type="hidden")
 												.input-label Add photo 3/4
 										.input-item.c2.drop-item(action="/upload")
 											.dz-message 
 												span.drop-item__icon
 													+icon('cross')
+												input.input-field(type="hidden")
 												.input-label Add photo in full length
 										.input-item.input-textarea
 											textarea.input-field(
@@ -202,6 +204,12 @@ block content
 												rows="1.5"
 												)
 											label.input-label(for="user-msg") Note
+										.input-item.c2.input-recaptcha
+											.recaptcha-wrap
+												input.recaptcha(
+													data-validation="recaptcha"
+													data-validation-recaptcha-sitekey="6LfyQ0YUAAAAALnPYQDtOHEU5cBfXMIMC3m5kPXn"
+													data-validation-error-msg="Вы не прошли каптчу")
 										.input-item.input-bttn
 											button.bttn.normal.w100(type="submit")
 												span send a message
