--- a/src/sass/components/_inputs.sass
+++ b/src/sass/components/_inputs.sass
@@ -183,19 +183,32 @@
 		&.drop-item
 			border: none
 			cursor: pointer
-			isplay: flex
+			display: flex
+			flex-wrap: wrap
 			align-items: center
-			.dz-message
+			input
+				opacity: 0
+				position: absolute
+				z-index: -1
+				top: 0
+				left: 0
+				width: 100%
+				height: 100%
+				padding: 0
+				display: block
 				font-size: 0
-				position: relative
+				&:hover
+					cursor: pointer
+				& + *
+					&:after
+						content: ''
+						display: none
 			.drop-item__icon
-				display: inline-block
+				display: block
 				vertical-align: middle
 				width: 30px
 				height: 30px
-				position: absolute
-				top: 0
-				left: 0
+				margin-right: 20px
 				color: $color
 				transform: none
 				+tr(transform .5s)
@@ -203,8 +216,10 @@
 					stroke-width: 0
 					+tr(stroke-width .3s)
 			.input-label
-				display: inline-block
-				padding-left: 50px
+				display: flex
+				align-items: center
+				width: 100%
+				height: 100%
 				position: relative
 				top: auto
 				left: auto
@@ -216,53 +231,35 @@
 				line-height: 30px
 				font-weight: 300
 				color: $link-color
-			&::before, &::after, .dz-success-mark, .dz-error-mark, .dz-image
-				display: none
-			.dz-preview
-				position: relative
-				display: inline-block
-				padding-right: 12px
-				margin-top: 16px
-				margin-left: 55px
-				cursor: normal
-			.dz-details
-				display: flex
-				.dz-size
-					order: 1
-					color: $link-color
-					font-size: $font-size
-					line-height: 2
-					font-weight: normal
-					margin-right: 15px
-					strong
-						font-weight: inherit
-				.dz-filename
-					order: 0
-					color: $color
-					font-size: $font-size
-					line-height: 2
-					font-weight: normal
-					margin-right: 15px
-			.dz-remove
-				position: absolute
-				top: 8px
-				right: 0
-				cursor: pointer
-			.dz-error-message
-				font-size: 14px
-				font-weight: normal
-				line-height: 1.43
-				color: $error-color
-				margin-top: 15px
-			&.dz-started
-				cursor: default
-				.dz-message
+				&:hover
 					cursor: pointer
-			&:hover
-				.drop-item__icon
-					transform: rotate(90deg)
-					svg
-						stroke-width: 1px
+					.drop-item__icon
+						transform: rotate(90deg)
+						svg
+							stroke-width: 1px
+					span
+						cursor: pointer
+			&::before, &::after,
+				display: none
+			.file-name
+				font-size: 18px
+				font-weight: 400
+			.file-name-wrap
+				display: none
+				padding-left: 50px
+				width: 100%
+				padding-bottom: 15px
+				cursor: default
+			.clear-file
+				display: inline-block
+				width: 16px
+				height: 16px
+				vertical-align: bottom
+				margin-left: 20px
+				transition: transform .5s
+				transform: none
+				&:hover
+					transform: rotate(-90deg)
 		&.input-bttn
 			border: none
 			text-align: right
