--- a/src/templates/7-0-Become-model.pug
+++ b/src/templates/7-0-Become-model.pug
@@ -169,34 +169,78 @@ block content
 										
 									.form-block__title photo
 									.input-row
-										.input-item.c2.drop-item(action="/upload")
-											.dz-message 
+										.input-item.c2.drop-item
+											label.input-label(for="photo-face")
 												span.drop-item__icon
 													+icon('cross')
-												input.input-field(
-													type="hidden"
-													data-validation="required"
-													data-validation-error-msg="required upload file"
+												input.input-field.drop-input(
+													type="file"
+													id="photo-face"
+													data-validation="mime size" 
+													data-validation-allowing="jpg, png, gif" 
+													data-validation-max-size="2M"
+													data-validation-error-msg-size="Загрузите файл не больше 2Мб"
+													data-validation-error-msg-mime="Вы можете загрузить изображения или документ .pdf"
 													)
-												.input-label Add photo face
-										.input-item.c2.drop-item(action="/upload")
-											.dz-message 
+												span Add photo face
+											.file-name-wrap
+												span.file-name
+												a.clear-file(href="#")
+													+icon('cross-X')
+										.input-item.c2.drop-item
+											label.input-label(for="photo-profile")
 												span.drop-item__icon
 													+icon('cross')
-												input.input-field(type="hidden")
-												.input-label Add profile photo
-										.input-item.c2.drop-item(action="/upload")
-											.dz-message 
+												input.input-field.drop-input(
+													type="file"
+													id="photo-profile"
+													data-validation="mime size" 
+													data-validation-allowing="jpg, png, gif" 
+													data-validation-max-size="2M"
+													data-validation-error-msg-size="Загрузите файл не больше 2Мб"
+													data-validation-error-msg-mime="Вы можете загрузить изображения или документ .pdf"
+													)
+												span Add profile photo
+											.file-name-wrap
+												span.file-name
+												a.clear-file(href="#")
+													+icon('cross-X')
+										.input-item.c2.drop-item
+											label.input-label(for="photo-3/4")
 												span.drop-item__icon
 													+icon('cross')
-												input.input-field(type="hidden")
-												.input-label Add photo 3/4
-										.input-item.c2.drop-item(action="/upload")
-											.dz-message 
+												input.input-field.drop-input(
+													type="file"
+													id="photo-3/4"
+													data-validation="mime size" 
+													data-validation-allowing="jpg, png, gif" 
+													data-validation-max-size="2M"
+													data-validation-error-msg-size="Загрузите файл не больше 2Мб"
+													data-validation-error-msg-mime="Вы можете загрузить изображения или документ .pdf"
+													)
+												span Add photo 3/4
+											.file-name-wrap
+												span.file-name
+												a.clear-file(href="#")
+													+icon('cross-X')
+										.input-item.c2.drop-item
+											label.input-label(for="photo-length")
 												span.drop-item__icon
 													+icon('cross')
-												input.input-field(type="hidden")
-												.input-label Add photo in full length
+												input.input-field.drop-input(
+													type="file"
+													id="photo-length"
+													data-validation="mime size" 
+													data-validation-allowing="jpg, png, gif" 
+													data-validation-max-size="2M"
+													data-validation-error-msg-size="Загрузите файл не больше 2Мб"
+													data-validation-error-msg-mime="Вы можете загрузить изображения или документ .pdf"
+													)
+												span Add photo in full length
+											.file-name-wrap
+												span.file-name
+												a.clear-file(href="#")
+													+icon('cross-X')
 										.input-item.input-textarea
 											textarea.input-field(
 												type="text"
@@ -204,12 +248,6 @@ block content
 												rows="1.5"
 												)
 											label.input-label(for="user-msg") Note
-										.input-item.c2.input-recaptcha
-											.recaptcha-wrap
-												input.recaptcha(
-													data-validation="recaptcha"
-													data-validation-recaptcha-sitekey="6LfyQ0YUAAAAALnPYQDtOHEU5cBfXMIMC3m5kPXn"
-													data-validation-error-msg="Вы не прошли каптчу")
 										.input-item.input-bttn
 											button.bttn.normal.w100(type="submit")
 												span send a message
