fix bag input(number), inner slider, modalmenu after input(focus) -> ios

--- a/src/sass/components/_modals.sass
+++ b/src/sass/components/_modals.sass
@@ -156,6 +156,7 @@
 					z-index: 1
 					transform: translateY(20px)
 					transition: opacity .1s .0s, transform .0s .1s, font-size .3s
+					will-change: transform, opacity
 					.modal-link
 						color: $color
 					span
