--- a/src/templates/6-0-contacts.pug
+++ b/src/templates/6-0-contacts.pug
@@ -39,6 +39,7 @@ block content
 											label.input-label(for="user-name") Name
 										.input-item.c2
 											input.input-field(type="tel"
+												pattern="[0-9]*"
 												id="user-tel")
 											label.input-label(for="user-tel") Phone
 										.input-item
