--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -54,6 +54,10 @@
 		&.hide-nav-burger
 			visibility: hidden
 			transition: opacity 0s 0s, visibility 0s 0s
+		&.block-click
+			opacity: 0
+			visibility: hidden
+			transition: opacity .3s 0s, visibility 0s .4s
 		+r(450)
 			width: 80px
 		+r(400)
