--- a/src/templates/7-0-Become-model.pug
+++ b/src/templates/7-0-Become-model.pug
@@ -60,6 +60,7 @@ block content
 												input.input-field(
 													type="number"
 													id="model-age"
+													pattern="[0-9]"
 													)
 												label.input-label(for="model-age") Age
 									.form-block__title options
@@ -67,6 +68,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
+												pattern="[0-9]*"
 												id="model-height"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -75,6 +77,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
+												pattern="[0-9]*"
 												id="model-bust"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -83,6 +86,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
+												pattern="[0-9]*"
 												id="model-waist"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -91,6 +95,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
+												pattern="[0-9]*"
 												id="model-hips"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -114,6 +119,7 @@ block content
 											input.input-field(
 												type="tel"
 												id="model-phone"
+												pattern="[0-9]*"
 												)
 											label.input-label(for="model-phone") Phone
 										.input-item.c2
