fix log-name-file in file-input, error message; fix search in models

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -127,7 +127,7 @@
 				width: 100%
 				
 			&__img
-				background-color: red
+				background-color: rgba(0,0,0,.5)
 				font-size: 0
 				img
 					display: block
