--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -37,7 +37,7 @@ h4, .h4
 	letter-spacing: 3px
 	text-transform: uppercase
 a
-	font-size: $font-size
+	font-size: inherit
 	color: $link-color
 	text-decoration: none
 	+tr(color .3s ease)
@@ -52,6 +52,7 @@ p, .text
 	font-weight: normal
 	line-height: 2
 	font-style: normal
+	
 	strong
 		font-size: inherit
 		font-weight: 500
@@ -59,10 +60,12 @@ p, .text
 	font-size: 20px
 	font-weight: 300
 	line-height: 1.5
+	
 .text-big
 	font-size: 26px
 	font-weight: 300
 	line-height: 1.62
+
 .sub-title
 	color: $light-brend
 form
