--- a/src/sass/components/_inputs.sass
+++ b/src/sass/components/_inputs.sass
@@ -205,6 +205,8 @@
 					&:after
 						content: ''
 						display: none
+			span
+				max-width: 75%
 			.drop-item__icon
 				display: block
 				vertical-align: middle
@@ -219,6 +221,7 @@
 					+tr(stroke-width .3s)
 			.input-label
 				display: flex
+				flex-wrap: wrap
 				align-items: center
 				width: 100%
 				height: 100%
@@ -246,6 +249,7 @@
 			.file-name
 				font-size: 18px
 				font-weight: 400
+				word-break: break-word
 			.file-name-wrap
 				display: none
 				padding-left: 50px
@@ -375,6 +379,8 @@
 		display: flex
 		justify-content: space-between
 		flex-wrap: wrap
+		// change
+		align-items: center
 
 .input-item
 	.help-block
@@ -401,3 +407,10 @@
 	&.drop-item.focus
 		.help-block
 			opacity: 1
+			position: relative
+			top: auto
+			right: auto
+			order: -1
+			margin-bottom: 10px
+			width: 100%
+			max-width: 100%
