--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -125,13 +125,24 @@
 			+r(768)
 				margin: 5px 0
 				width: 100%
-				
 			&__img
+				width: 100%
+				height: 0
+				padding-bottom: 150%
+				position: relative
 				background-color: rgba(0,0,0,.5)
 				font-size: 0
 				img
 					display: block
 					object-fit: cover
+					height: 100%
+					width: auto
+			&__inn
+				position: absolute
+				top: 0
+				left: 0
+				width: 100%
+				height: 100%
 			&__title
 				color: #ffffff
 				font-size: 36px
@@ -239,8 +250,21 @@
 			&.hide-gallery
 				border: 1px solid red
 			&__img
+				width: 100%
+				height: 0
+				padding-bottom: 150%
+				position: relative
+				background-color: rgba(0,0,0,.5)
+			&__inn
+				position: absolute
+				top: 0
+				left: 0
+				width: 100%
+				height: 100%
 				img
 					display: block
+					height: 100%
+					width: auto
 			&__date
 				color: rgba(#ffffff, .6)
 				font-size: 14px
