--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -21,15 +21,25 @@ h1, .h1
 	font-weight: 200
 	line-height: 1
 	text-transform: uppercase
+	+r(450)
+		font-size: 38px
+	+r(350)
+		word-break: break-word
 h2, .h2
 	font-size: 50px
 	font-weight: 200
 	line-height: normal
 	text-transform: uppercase
+	+r(450)
+		font-size: 38px
+	+r(350)
+		word-break: break-word
 h3, .h3
 	font-size: 36px
 	font-weight: 300
 	line-height: 1
+	+r(450)
+		font-size: 32px
 h4, .h4
 	font-size: 20px
 	font-weight: normal
