--- a/src/sass/helpers/_reset.sass
+++ b/src/sass/helpers/_reset.sass
@@ -61,6 +61,7 @@ html
     box-sizing: border-box
 *, *:before, *:after
     box-sizing: inherit
+    -webkit-highlight: none
 body
     -webkit-text-size-adjust: none
     -webkit-overflow-scrolling: touch
