--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -16,6 +16,9 @@ body
 	background-color: $bg-brend
 	&.show-menu
 	    position: fixed
+	    z-index: -1
+	    pointer-events: none
+	    
 h1, .h1
 	font-size: 50px
 	font-weight: 200
