--- a/src/templates/7-0-Become-model.pug
+++ b/src/templates/7-0-Become-model.pug
@@ -60,7 +60,7 @@ block content
 												input.input-field(
 													type="number"
 													id="model-age"
-													pattern="[0-9]"
+													pattern="\\d*"
 													)
 												label.input-label(for="model-age") Age
 									.form-block__title options
@@ -68,7 +68,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
-												pattern="[0-9]*"
+												pattern="\\d*"
 												id="model-height"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -77,7 +77,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
-												pattern="[0-9]*"
+												pattern="\\d*"
 												id="model-bust"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -86,7 +86,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
-												pattern="[0-9]*"
+												pattern="\\d*"
 												id="model-waist"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -95,7 +95,7 @@ block content
 										.input-item.c4
 											input.input-field(
 												type="number"
-												pattern="[0-9]*"
+												pattern="\\d*"
 												id="model-hips"
 												data-validation="number"
 												data-validation-error-msg="required field"
@@ -119,7 +119,7 @@ block content
 											input.input-field(
 												type="tel"
 												id="model-phone"
-												pattern="[0-9]*"
+												pattern="^\\+\\d*"
 												)
 											label.input-label(for="model-phone") Phone
 										.input-item.c2
