--- a/src/templates/layouts/_head.pug
+++ b/src/templates/layouts/_head.pug
@@ -1,7 +1,7 @@
 meta(charset="utf-8")
 title= title || 'Template'
 meta(http-equiv="X-UA-Compatible" content="IE=Edge")
-meta(name="viewport" content="width=device-width, initial-scale=1")
+meta(name="viewport" content="width=device-width, initial-scale=1.0", maximum-scale="1.0", user-scalable="no")
 link(rel="apple-touch-icon", sizes="180x180", href="/img/fav/apple-touch-icon.png")
 link(rel="icon", type="image/png", sizes="32x32", href="/img/fav/favicon-32x32.png")
 link(rel="icon", type="image/png", sizes="16x16", href="/img/fav/favicon-16x16.png")
