--- a/src/sass/components/_inputs.sass
+++ b/src/sass/components/_inputs.sass
@@ -23,6 +23,11 @@
 	width: 100%
 	max-width: 590px
 	margin: 0 auto
+	padding-right: 30px
+	+r(450)
+		padding-left: 10px
+	+r(400)
+		padding-left: 5px
 	.search-not-found
 		opacity: 0
 		transform: translateY(20px)
