--- a/src/templates/3-0-inner.pug
+++ b/src/templates/3-0-inner.pug
@@ -80,14 +80,14 @@ block content
 											.play-button-icon
 								.swiper-slide.swiper-slide-social(data-link="social-bttn")
 									+share-block
-							//- .swiper-scrollbar.inner-slider-bar
-							.swiper-navigation
-								.slide-target(data-slide="portfolio-bttn") portfolio
-								.slide-target(data-slide="editorial-bttn") editorial
-								.slide-target(data-slide="polaroids-bttn") polaroids
-								.slide-target(data-slide="video-bttn") video
-								.slide-target(data-slide="social-bttn") social
-							.navigation-link
-								.navigation-link-wrap
-									a.navigation-link__item(href="#") Previous
-									a.navigation-link__item(href="#") Next
+							.swiper-scrollbar.inner-slider-bar
+							//- .swiper-navigation
+							//- 	.slide-target(data-slide="portfolio-bttn") portfolio
+							//- 	.slide-target(data-slide="editorial-bttn") editorial
+							//- 	.slide-target(data-slide="polaroids-bttn") polaroids
+							//- 	.slide-target(data-slide="video-bttn") video
+							//- 	.slide-target(data-slide="social-bttn") social
+							//- .navigation-link
+							//- 	.navigation-link-wrap
+							//- 		a.navigation-link__item(href="#") Previous
+							//- 		a.navigation-link__item(href="#") Next
