--- a/src/templates/5-0-gallery.pug
+++ b/src/templates/5-0-gallery.pug
@@ -31,11 +31,11 @@ block content
 								.swiper-slide.gallery-filter__bttn
 									.gallery-filter__item.no-barba(data-filter=".video") #video
 							.swiper-scrollbar.gallery-filter-bar
-								
-						.gallery-wrap.ajax-list
-							+gallery-item('gallery-1.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'editorial video')
-							+gallery-item('gallery-2.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'newface campaign')
-							+gallery-item('gallery-3.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'show shooting newface')
-							+gallery-item('gallery-4.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'video show')
-							.ajax-pager-wrap.lazy.gallery-page__footer
-								a.link-big.ajax-pager-link.no-barba(href="gallery-add.html", data-wrapper-class="gallery-wrap") load more
+						.gallery-wrap-out
+							.gallery-wrap.ajax-list
+								+gallery-item('gallery-1.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'editorial video')
+								+gallery-item('gallery-2.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'newface campaign')
+								+gallery-item('gallery-3.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'show shooting newface')
+								+gallery-item('gallery-4.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'video show')
+								.ajax-pager-wrap.lazy.gallery-page__footer
+									a.link-big.ajax-pager-link.no-barba(href="gallery-add.html", data-wrapper-class="gallery-wrap") load more
