--- a/src/templates/partials/_modals.pug
+++ b/src/templates/partials/_modals.pug
@@ -25,9 +25,9 @@
 				li.pages-links__item
 					a.navigation-link__item.modal-link(href="./7-0-Become-model.html") Become a model
 				li.pages-links__item
-					a.navigation-link__item.modal-link.business-request(href="./6-0-contacts.html") Business request
+					a.navigation-link__item.modal-link.business-request(href="./6-0-contacts.html") Cooperate
 				li.pages-links__item
-					a.navigation-link__item.modal-link.social-list(href="./6-0-contacts.html") social
+					a.navigation-link__item.modal-link(href="./8-0-social.html") social
 				li.pages-links__item
 					a.navigation-lang.link-lang.no-barba(href="#") рус
 	
