--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -65,7 +65,7 @@
 			max-width: 100%
 
 .logo-wrap
-	padding: 40px 40px 70px 40px
+	padding: 25px 30px 70px 30px
 	position: relative
 	z-index: 2
 	a
@@ -75,13 +75,13 @@
 		margin: 0 0 0 auto
 		color: $color
 		svg
-			fill: $color
+			fill:  $light-brend
 	+r(450)
-		padding: 30px 40px 80px 40px
+		padding: 25px 30px 80px 30px
 	+r(400)
-		padding: 25px 40px 75px 40px
+		padding: 25px 30px 75px 30px
 	+r(350)
-		padding: 25px 40px 60px 40px
+		padding: 25px 30px 60px 30px
 
 .aside
 	.contacts-wrap
@@ -105,9 +105,16 @@
 
 .models-page
 	padding-bottom: 40px
-	padding-left: 30px
+	// padding-left: 30px
 	height: 100vh
 	.models-wrap
+		&-out
+			overflow-x: hidden
+			padding-left: 60px
+			+r(450)
+				padding-left: 40px
+			+r(400)
+				padding-left: 30px
 		font-size: 0
 		margin: 0 -5px
 		position: relative
@@ -220,7 +227,8 @@
 			bottom: 20px
 			left: 0
 	.gallery-filter
-		margin: 60px 0 75px 0
+		margin: 60px 25px 75px 0
+		
 		&__bttn
 			margin-bottom: 20px
 			width: auto
@@ -240,7 +248,14 @@
 		font-size: 0
 		margin: 0 -10px
 		position: relative
-		padding-bottom: 80px;
+		padding-bottom: 80px
+		&-out
+			overflow-x: hidden
+			padding-left: 70px
+			+r(450)
+				padding-left: 50px
+			+r(400)
+				padding-left: 40px
 		.gallery-item
 			// display: inline-block
 			width: calc(50% - 10px)
@@ -353,11 +368,12 @@
 		font-size: 0
 		& > *
 			display: block
-			max-width: 680px
+			// max-width: 680px
 			margin-left: 0
 			&:not(:last-child)
 				margin-bottom: 20px
 	&-footer
+		display: none
 		width: 100%
 		text-align: left
 		margin-left: auto
@@ -373,7 +389,20 @@
 				opacity: 1
 				transform: none
 	.share-block
+		height: 100vh
 		padding: 45px 20px 40px 20px
+		position: relative
+		&:after
+			content: ''
+			display: block
+			width: 100vw
+			height: 100%
+			position: absolute
+			left: 50%
+			top: 0
+			transform: translateX(-50%)
+			background-color: inherit
+			z-index: -1
 		&__title
 			margin-bottom: 50px
 		&__link
@@ -573,11 +602,13 @@
 .inner-slider
 	height: 100%
 	width: 100%
-	padding-bottom: 100px
+	padding: 100px 40px
+	+r(450)
+		padding: 100px 30px
+	+r(400)
+		padding: 30px 25px 60px 25px
 	display: flex
 	align-items: stretch
-	+r(550)
-		padding-bottom: 150px
 	.navigation-link
 		bottom: 0
 		right: 0
@@ -598,6 +629,25 @@
 				color: #fff 
 				&:after
 					background: #fff !important
+	&-bar.swiper-scrollbar
+		background-color: rgba(#707070, 1)
+		height: 1px
+		left: 0
+		bottom: 50px
+		width: calc(100% - 80px)
+		margin-right: 40px
+		margin-left: 40px
+		+r(450)
+			width: calc(100% - 60px)
+			margin-right: 30px
+			margin-left: 30px
+		+r(400)
+			bottom: 30px
+			width: calc(100% - 50px)
+			margin-right: 25px
+			margin-left: 25px
+		.swiper-scrollbar-drag
+			background-color: rgba(#ffffff, 1)
 	.navigation-link-wrap:hover .navigation-link__item:first-child:not(:hover):after
 		background: #fff !important
 
@@ -764,3 +814,34 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete.lg-current 
 		width: 100%
 
 
+.social-wrap
+	height: 100%
+	display: flex
+	flex-wrap: wrap
+	justify-content: center
+	align-items: center
+	padding-top: 30px
+	padding-bottom: 30px
+	&-links
+		text-align: center
+	&__item
+		display: block
+		color: $link-color
+		margin-bottom: 25px
+		font-size: 30px
+		font-weight: 300
+		line-height: 1.4
+		opacity: 0
+		z-index: 1
+		transform: translateY(20px)
+		transition: opacity .1s .0s, transform .0s .1s
+		will-change: transform, opacity
+		+r(350)
+			font-size: 25px
+	&.animate
+		@for $i from 1 to 12
+			.social-wrap__item:nth-child(#{$i})
+				opacity: 1
+				transform: none
+				transition: opacity .3s, transform .4s
+				transition-delay: $i /4 +s
