--- a/src/sass/components/_modals.sass
+++ b/src/sass/components/_modals.sass
@@ -144,9 +144,9 @@
 					&:last-child
 						margin-bottom: 15px
 					+r(400)
-						margin-bottom: 30px
-					+r(350)
 						margin-bottom: 20px
+					+r(350)
+						margin-bottom: 15px
 							
 			.pages-links
 				&__item
@@ -159,28 +159,18 @@
 					transform: translateY(20px)
 					transition: opacity .1s .0s, transform .0s .1s, font-size .3s
 					will-change: transform, opacity
-					&:nth-last-child(2)
-						position: relative
-						&:before
-							content: ''
-							display: block
-							width: 100%
-							height: 1px
-							background-color: $link-color
-							opacity: .4
-							margin-bottom: 20px
-							margin-top: 20px
 					.modal-link
 						color: $color
 					span
 						font-size: 50px
+						font-weight: 200
 						color: $color
 						transition: opacity .35s .1s
 						+r(450)
 							font-size: 30px
-							line-height: 1
-						+r(350)
-							font-size: 20px
+							line-height: normal
+						// +r(350)
+						// 	font-size: 20px
 
 
 			.navigation-link
@@ -205,14 +195,14 @@
 			
 			.link-lang
 				display: block
-				font-size: 12px
+				font-size: 16px
 				font-weight: normal
 				// margin-top: 35px
 				line-height: 1.67
 				letter-spacing: 3px
 				text-transform: uppercase
 				visibility: hidden
-				color: $color
+				color: $light-brend
 				transform: translateX(-20px)
 				transform-origin: 100% 0
 				opacity: 0
@@ -222,7 +212,7 @@
 			display: flex
 			justify-content: space-between
 			align-items: center
-			padding-top: 30px
+			padding-top: 25px
 			margin-bottom: 25px
 			.link-logo
 				display: block
@@ -231,7 +221,7 @@
 				color: $color
 				z-index: 3
 				svg
-					fill: $color
+					fill: $light-brend
 				opacity: 0
 				transform: translateX(20px)
 				transition: transform .3s .1s, opacity .3s .1s
