--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -845,3 +845,15 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete.lg-current 
 	top: 25px
 	right: 35px
 	padding: 0 !important
+	+rm(450)
+		top: 40px
+
+.logo-wrap.error-logo:after 
+    content: ''
+    display: block
+    position: absolute
+    top: 0
+    right: 0
+    height: 1px
+    background: red
+    width: 10000px
