--- a/src/sass/components/_modals.sass
+++ b/src/sass/components/_modals.sass
@@ -199,7 +199,7 @@
 				font-weight: normal
 				// margin-top: 35px
 				line-height: 1.67
-				letter-spacing: 3px
+				letter-spacing: normal
 				text-transform: uppercase
 				visibility: hidden
 				color: $light-brend
@@ -237,19 +237,19 @@
 				transition: opacity .3s .1s, left .3s .1s, transform .3s .1s
 				-webkit-font-smoothing: antialiased
 	
-		.link-dev
-			color: $disable-color
-			font-size: 12px
-			line-height: 1.67
-			letter-spacing: 3px
-			text-transform: uppercase
-			font-weight: normal
-			position: absolute
-			bottom: 190px
-			transform: rotate(-90deg) translateY(20px)
-			transform-origin: 100% 0
-			right: 45px
-			opacity: 0
-			z-index: 7
-			transition: transform .3s .1s, opacity .3s .1s
+		// .link-dev
+		// 	color: $disable-color
+		// 	font-size: 12px
+		// 	line-height: 1.67
+		// 	letter-spacing: 3px
+		// 	text-transform: uppercase
+		// 	font-weight: normal
+		// 	position: absolute
+		// 	bottom: 190px
+		// 	transform: rotate(-90deg) translateY(20px)
+		// 	transform-origin: 100% 0
+		// 	right: 45px
+		// 	opacity: 0
+		// 	z-index: 7
+		// 	transition: transform .3s .1s, opacity .3s .1s
 
