--- a/src/templates/2-0-models.pug
+++ b/src/templates/2-0-models.pug
@@ -13,6 +13,7 @@ block content
 			.block-load
 				.block-content
 					.models-page
+						h1 Models
 						+search-block
 						.models-wrap-out
 							.models-wrap.ajax-list
