--- a/src/templates/layouts/_mixins.pug
+++ b/src/templates/layouts/_mixins.pug
@@ -23,7 +23,7 @@ mixin share-block
 				a.link-social(href="#") Twitter
 				a.link-social(href="#") Google +
 			.share-block__bttn
-				a(href="6-0-contacts.html").bttn.reverse
+				a(href="6-0-contacts.html").bttn.reverse.business-request
 					span business request
 
 mixin gallery-item(img, date, title, short, add_class)
