--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -834,6 +834,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete.lg-current 
 		transform: translateY(20px)
 		transition: opacity .1s .0s, transform .0s .1s
 		will-change: transform, opacity
+		letter-spacing: normal
 		+r(350)
 			font-size: 25px
 	&.animate
