--- a/src/sass/components/_shareblock.sass
+++ b/src/sass/components/_shareblock.sass
@@ -2,10 +2,10 @@
 	text-align: center
 	padding: 80px
 	box-sizing: border-box
-	+vertical
-	&-inner
-		display: inline-block
-		vertical-align: middle
+	display: flex !important
+	justify-content: center
+	align-items: center
+	// &-inner
 	&__title
 		font-size: 12px
 		font-weight: normal
