--- a/src/templates/layouts/_mixins.pug
+++ b/src/templates/layouts/_mixins.pug
@@ -24,7 +24,7 @@ mixin share-block
 				a.link-social(href="#") Google +
 			.share-block__bttn
 				a(href="6-0-contacts.html").bttn.reverse.business-request
-					span business request
+					span СОТРУДНИЧАТЬ
 
 mixin gallery-item(img, date, title, short, add_class)
 	a(href="5-1-gallery-news.html" class='gallery-item '+ add_class)
