--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -689,7 +689,6 @@
 				width: 100%
 				max-width: 80%
 				.share-block
-					display: block
 					width: 100%
 					height: 100%
 					padding: 20px
@@ -706,6 +705,12 @@
 					&__bttn
 						margin: 0 
 						margin-top: 30px
+						text-align: center
+						.bttn
+							padding-left: 16px
+							padding-right: 16px
+							text-align: center
+
 	&.swiper-container-horizontal
 		// & >.swiper-scrollbar.inner-slider-bar
 		// 	bottom: 70px
