--- a/src/sass/components/_modals.sass
+++ b/src/sass/components/_modals.sass
@@ -159,6 +159,7 @@
 					transform: translateY(20px)
 					transition: opacity .1s .0s, transform .0s .1s, font-size .3s
 					will-change: transform, opacity
+					-webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
 					.modal-link
 						color: $color
 					span
